refgrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: api
  namespace: default
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: TLSRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
