tlsroute-api.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: taloscp
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: taloscp
    namespace: envoy-gateway-system
    sectionName: apipassthrough
  hostnames:
  - "taloscp.kubespaces.cloud"
  rules:
  - backendRefs:
    - name: taloscp
      port: 6443
      namespace: default
